--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "editor.formatOnSave": true,
     "python.analysis.typeCheckingMode": "strict",
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "python.linting.pycodestyleEnabled": true,
+    "python.linting.pylintEnabled": true
 }
