add nft.storage support

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 URL_PREFIX=""
 MINT_RESOURCE_PATH="app/pfp_builder_resources"
 PINATA_JWT=""
+NFT_STORAGE_JWT=""
 MINT_RPC_URL=""
 MINT_CONTRACT_ADDRESS=""
 MINT_SIGNER_PRIVATE_KEY=""
