--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NFT_STORAGE_JWT=""
 MINT_RPC_URL=""
 MINT_CONTRACT_ADDRESS=""
 MINT_SIGNER_PRIVATE_KEY=""
+VERIFICATION_RPC_URL=""
+VERIFICATION_CONTRACT_ADDRESS=""
